# thomson_solver

./: CMakeLists.txt  LICENSE  README.md  generalized_thomson_solver.cpp  parameters.config  run.sh
Plotter/: plots3d.py  utils.py
grad_proj_method/: gradient_projection_method.h  math_utils.h  optim_utils.h
